[fix] analyzer controller